[package]
name = "bunker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora = { version = "0.3.0", features = ["lb"]}
serde = "1.0"
serde_yml = "0.0.12"
pretty_env_logger = "0.5.0"
log = "0.4.22"
async-trait = "0.1.83"
aho-corasick = "1.1.3"